--- a/.github/workflows/terraform-deployment.yaml
+++ b/.github/workflows/terraform-deployment.yaml
@@ -34,16 +34,16 @@ jobs:
 
     # Validates Terraform configuration files
     - name: Terraform Validate
-      run:  terraform validate
+      run:  cd terraform && terraform validate
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt -check
+      run: cd terraform && terraform fmt -check
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false -var-file=variables.tfvars
+      run: cd terraform && terraform plan -input=false -var-file=variables.tfvars
 
     # On push to "main", build or change infrastructure according to Terraform configuration files
     # - name: Terraform Apply
-    #   run: terraform apply -auto-approve -input=false -var-file=variables.tfvars
+    #   run: cd terraform && terraform apply -auto-approve -input=false -var-file=variables.tfvars
